# coloringsolver

./: .bazelrc  .ycm_extra_conf.py  CMakeLists.txt  README.md  WORKSPACE  requirements.txt  results.ods
.github/workflows/: build.yml
coloringsolver/: BUILD  algorithm_formatter.hpp  bench.py  instance.cpp  instance.hpp  main.cpp  solution.cpp  solution.hpp  variables.bzl
coloringsolver/algorithms/: BUILD  algorithms.cpp  algorithms.hpp  branchandcut_cplex.cpp  branchandcut_cplex.hpp  column_generation.cpp  column_generation.hpp  columngeneration.cpp  columngeneration.hpp  greedy.cpp  greedy.hpp  local_search_row_weighting.cpp  local_search_row_weighting.hpp  localsearch.cpp  localsearch.hpp  localsearch_rowweighting.cpp  localsearch_rowweighting.hpp  milp_cplex.cpp  milp_cplex.hpp
data/: BUILD  data.csv  data_cgshop2022.csv  data_dimacs1992.csv  data_gebremedhin2013.csv  data_knitro.csv  data_rossi2014.csv  data_verma2015.csv  test_all.txt  test_milp_assignment.txt  test_milp_assignment_break_symmetries.txt  test_milp_partial_ordering.txt  test_milp_partial_ordering_hybrid.txt  test_milp_representatives.txt
data/tests/complete/: complete_n10_solution.txt  complete_n20_solution.txt  complete_n50_solution.txt
data/tests/random/: random_n10_p0.02_s4  random_n10_p0.02_s7  random_n10_p0.02_s7_solution.txt  random_n10_p0.05_s3  random_n10_p0.05_s3_solution.txt  random_n10_p0.05_s4  random_n10_p0.05_s4_solution.txt  random_n10_p0.05_s7  random_n10_p0.05_s7_solution.txt  random_n10_p0.1_s0  random_n10_p0.1_s0_solution.txt  random_n10_p0.1_s1  random_n10_p0.1_s1_solution.txt  random_n10_p0.1_s3  random_n10_p0.1_s3_solution.txt  random_n10_p0.1_s4  random_n10_p0.1_s4_solution.txt  random_n10_p0.1_s5  random_n10_p0.1_s6  random_n10_p0.1_s6_solution.txt  random_n10_p0.1_s7  random_n10_p0.1_s7_solution.txt  random_n10_p0.2_s0  random_n10_p0.2_s0_solution.txt  random_n10_p0.2_s1  random_n10_p0.2_s1_solution.txt  random_n10_p0.2_s2  random_n10_p0.2_s3  random_n10_p0.2_s3_solution.txt  random_n10_p0.2_s4  random_n10_p0.2_s4_solution.txt  random_n10_p0.2_s5  random_n10_p0.2_s5_solution.txt  random_n10_p0.2_s6  random_n10_p0.2_s6_solution.txt  random_n10_p0.2_s7  random_n10_p0.2_s7_solution.txt  random_n10_p0.5_s0  random_n10_p0.5_s0_solution.txt  random_n10_p0.5_s1  (+177 more)
data/tests/random_regular/: random_regular_n10_d2_s0  random_regular_n10_d2_s0_solution.txt  random_regular_n10_d2_s1  random_regular_n10_d2_s1_solution.txt  random_regular_n10_d2_s2  random_regular_n10_d2_s2_solution.txt  random_regular_n10_d2_s3  random_regular_n10_d2_s3_solution.txt  random_regular_n10_d2_s4  random_regular_n10_d2_s4_solution.txt  random_regular_n10_d2_s5  random_regular_n10_d2_s5_solution.txt  random_regular_n10_d2_s6  random_regular_n10_d2_s6_solution.txt  random_regular_n10_d2_s7  random_regular_n10_d2_s7_solution.txt  random_regular_n10_d4_s0  random_regular_n10_d4_s0_solution.txt  random_regular_n10_d4_s1  random_regular_n10_d4_s1_solution.txt  random_regular_n10_d4_s2  random_regular_n10_d4_s2_solution.txt  random_regular_n10_d4_s3  random_regular_n10_d4_s3_solution.txt  random_regular_n10_d4_s4  random_regular_n10_d4_s4_solution.txt  random_regular_n10_d4_s5  random_regular_n10_d4_s5_solution.txt  random_regular_n10_d4_s6  random_regular_n10_d4_s6_solution.txt  random_regular_n10_d4_s7  random_regular_n10_d4_s7_solution.txt  random_regular_n10_d6_s0  random_regular_n10_d6_s0_solution.txt  random_regular_n10_d6_s1  random_regular_n10_d6_s1_solution.txt  random_regular_n10_d6_s2  random_regular_n10_d6_s2_solution.txt  random_regular_n10_d6_s3  random_regular_n10_d6_s3_solution.txt  (+418 more)
include/coloringsolver/algorithms/: algorithms.hpp  column_generation.hpp  milp.hpp  milp_cplex.hpp
scripts/: download_data.py  generate_data.py  run_tests.py  solve_test_data.py
src/: CMakeLists.txt  algorithm_formatter.cpp  main.cpp  solution.cpp
src/algorithms/: CMakeLists.txt  algorithms.cpp  column_generation.cpp  local_search_row_weighting.cpp  milp.cpp  milp_cplex.cpp
test/: CMakeLists.txt
test/algorithms/: CMakeLists.txt  milp_test.cpp  tests.cpp  tests.hpp
